--- a/front/package.json
+++ b/front/package.json
@@ -3,13 +3,22 @@
   "version": "1.0.0",
   "description": "강원대학교 축제 홈페이지",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "parcel src/index.html",
+    "prepublish": "rimraf dist",
+    "build": "parcel build src/index.html",
+    "lint": "eslint src --fix",
+    "prepare": "husky install || true"
+  },
   "license": "UNLICENSED",
   "devDependencies": {
-    "parcel": "^2.7.0"
+    "parcel": "^2.7.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   }
 }
