--- a/front/package.json
+++ b/front/package.json
@@ -12,14 +12,15 @@
   },
   "license": "UNLICENSED",
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.2",
+    "@parcel/transformer-sass": "^2.7.0",
     "parcel": "^2.7.0",
-    "process": "^0.11.10",
-    "@emotion/babel-plugin": "^11.10.2"
+    "process": "^0.11.10"
   },
   "dependencies": {
-    
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
