--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "@emotion/babel-plugin": "^11.10.2",
     "@parcel/transformer-sass": "^2.7.0",
     "parcel": "^2.7.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "prop-types": "^15.8.1"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
