--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "parcel": "^2.7.0",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
+    "react-hook-form": "^7.35.0",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
