--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.2",
     "@parcel/transformer-sass": "^2.7.0",
+    "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "husky": "^8.0.1",
     "parcel": "^2.7.0",
     "process": "^0.11.10",
